classDiagram
    class IndicatorEngine {
        -chart: IChartApi | null
        -candles: Candle[]
        -configs: IndicatorConfig[]
        -instances: Map~string, IndicatorInstance~
        +setChart(chart: IChartApi | null): void
        +setIndicators(configs: IndicatorConfig[]): void
        +setCandles(candles: Candle[]): void
        +destroy(): void
        -syncInstances(): void
        -disposeInstances(): void
    }
    
    class IndicatorInstance {
        +id: string
        +runtime: IndicatorRuntime~IndicatorConfig~
    }
    
    class IndicatorRuntime~TConfig~ {
        <<interface>>
        +updateConfig(config: TConfig): void
        +updateData(candles: Candle[]): void
        +destroy(): void
    }
    
    class IndicatorRegistry {
        <<singleton>>
        +getIndicatorDefinition(type: IndicatorType): IndicatorDefinition | null
        +indicatorList: IndicatorDefinition[]
    }
    
    class IndicatorDefinition~TConfig~ {
        +type: IndicatorType
        +title: string
        +description: string
        +group: "trend" | "momentum" | "volatility"
        +shortLabel: string
        +summary(config: TConfig): string
        +getDefaultConfig(id: string, order: number): TConfig
        +fields: IndicatorField[]
        +createRuntime(chart: IChartApi): IndicatorRuntime~TConfig~
    }
    
    class LineSeriesRuntime~TConfig~ {
        -series: ISeriesApi~"Line"~
        -currentConfig: TConfig | null
        +updateConfig(config: TConfig): void
        +updateData(candles: Candle[]): void
        +destroy(): void
    }
    
    class RsiRuntime {
        -series: ISeriesApi~"Line"~
        -currentConfig: RsiIndicatorConfig | null
        -overboughtLine: IPriceLine | null
        -oversoldLine: IPriceLine | null
        +updateConfig(config: RsiIndicatorConfig): void
        +updateData(candles: Candle[]): void
        +destroy(): void
        -resetPriceLines(): void
        -createZoneLines(config: RsiIndicatorConfig): void
    }
    
    class BollingerRuntime {
        -basisSeries: ISeriesApi~"Line"~
        -upperSeries: ISeriesApi~"Line"~
        -lowerSeries: ISeriesApi~"Area"~
        -currentConfig: BollingerBandsIndicatorConfig | null
        +updateConfig(config: BollingerBandsIndicatorConfig): void
        +updateData(candles: Candle[]): void
        +destroy(): void
    }
    
    class IndicatorConfig {
        +id: string
        +type: IndicatorType
        +name: string
        +isEnabled: boolean
        +order: number
    }
    
    class SmaIndicatorConfig {
        +period: number
        +source: string
        +color: string
        +lineWidth: number
    }
    
    class EmaIndicatorConfig {
        +period: number
        +source: string
        +color: string
        +lineWidth: number
    }
    
    class RsiIndicatorConfig {
        +period: number
        +source: string
        +color: string
        +lineWidth: number
        +overbought: number
        +oversold: number
        +showZones: boolean
    }
    
    class BollingerBandsIndicatorConfig {
        +period: number
        +stdDev: number
        +source: string
        +lineWidth: number
        +basisColor: string
        +upperColor: string
        +lowerColor: string
        +fillOpacity: number
    }
    
    class CalculationFunctions {
        <<namespace>>
        +calculateSma(candles: Candle[], period: number, source: string): LineData[]
        +calculateEma(candles: Candle[], period: number, source: string): LineData[]
        +calculateRsi(candles: Candle[], period: number, source: string): LineData[]
        +calculateBollingerBands(candles: Candle[], period: number, stdDev: number, source: string): BollingerData[]
    }
    
    IndicatorEngine --> IndicatorInstance : manages
    IndicatorInstance --> IndicatorRuntime : contains
    IndicatorRuntime <|.. LineSeriesRuntime : implements
    IndicatorRuntime <|.. RsiRuntime : implements
    IndicatorRuntime <|.. BollingerRuntime : implements
    IndicatorEngine --> IndicatorRegistry : uses
    IndicatorRegistry --> IndicatorDefinition : contains
    IndicatorDefinition --> IndicatorRuntime : creates
    LineSeriesRuntime --> CalculationFunctions : uses
    RsiRuntime --> CalculationFunctions : uses
    BollingerRuntime --> CalculationFunctions : uses
    IndicatorConfig <|-- SmaIndicatorConfig : extends
    IndicatorConfig <|-- EmaIndicatorConfig : extends
    IndicatorConfig <|-- RsiIndicatorConfig : extends
    IndicatorConfig <|-- BollingerBandsIndicatorConfig : extends

